[gd_scene load_steps=7 format=3 uid="uid://cnttea400lmhs"]

[ext_resource type="Texture2D" uid="uid://c0ygqf1dckykq" path="res://Art/Other/32/InnerRing32.png" id="1_yewun"]
[ext_resource type="Texture2D" uid="uid://8m0nciqcan1b" path="res://Art/Other/32/OuterRing32.png" id="2_5rtm3"]
[ext_resource type="Texture2D" uid="uid://b05nx7y4jkp72" path="res://Art/Other/Sprite-22221222.png" id="3_7u2fo"]
[ext_resource type="Texture2D" uid="uid://cky3h6ktwm6w2" path="res://Art/Other/Sprite-22222.png" id="4_5rtm3"]
[ext_resource type="Script" uid="uid://bbc7fnxtbx5eq" path="res://Scripts/loot_box.gd" id="5_loot"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7us3n"]

[node name="LootBox" type="CharacterBody2D"]
script = ExtResource("5_loot")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_7us3n")

[node name="HealthBar" type="TextureProgressBar" parent="."]
offset_left = -16.0
offset_top = -17.0
offset_right = 24.0
offset_bottom = 23.0
value = 100.0
fill_mode = 5
texture_under = ExtResource("1_yewun")
texture_progress = ExtResource("2_5rtm3")
tint_progress = Color(1, 1, 1, 0.75686276)

[node name="Normal" type="Sprite2D" parent="."]
texture = ExtResource("3_7u2fo")

[node name="BrokenParts" type="Node2D" parent="."]

[node name="Piece1" type="Sprite2D" parent="BrokenParts"]
visible = false
position = Vector2(0, -1)
rotation = 3.1415927
texture = ExtResource("4_5rtm3")

[node name="Piece2" type="Sprite2D" parent="BrokenParts"]
visible = false
texture = ExtResource("4_5rtm3")
